# akasha-core

./: .gitignore  ARCHITECTURE.md  BATCHING_PLAN.md  Cargo.toml  FUSION_TODO.md  README.md  REFACTOR.md  TODO.md  log.txt  readme.MD  tokenizer.json
data/: mini_masal.txt
examples/: overfit_demo.rs  round_trip.rs  smoke_test.rs  tokenizer_test.rs  train_dashboard.rs
notes/: todo.html
scripts/: tester_script.bat  tester_script.sh  train.bat  train.sh
src/: config.rs  data.rs  lib.rs  main.rs  tokenizer.rs
src/nn/: add.rs  akasha_model.rs  attention.rs  cache.rs  checkpoint.rs  cross_entropy.rs  embedding.rs  inference.rs  inference_graphs.rs  init.rs  layers.rs  linear.rs  mod.rs  pipeline.rs  rmsnorm.rs  rope.rs  sampling.rs  shader_paths.rs  silu.rs  train.rs  traits.rs  weights.rs
src/nn/ops/: attention.rs  cache.rs  elementwise.rs  embedding.rs  emit.rs  head_move.rs  loss.rs  matmul.rs  meta.rs  mod.rs  norm.rs  rope.rs
src/optim/: adamw.rs  mod.rs
src/shaders/: add_inplace.comp  add_inplace.spv  causal_mask.comp  causal_mask.spv  cpu.rs  cuda.rs  embedding.comp  embedding.spv  matmul.comp  matmul.spv  matmul_bwd_input_trp_b.comp  matmul_bwd_input_trp_b.spv  matmul_bwd_weight_trp_a.comp  matmul_bwd_weight_trp_a.spv  matmul_trp.comp  matmul_trp.spv  mod.rs  rmsnorm.comp  rmsnorm.spv  rmsnorm_bwd.comp  rmsnorm_bwd.spv  rope.comp  rope.spv  rope_bwd.comp  rope_bwd.spv  silu.comp  silu.spv  silu_bwd.comp  silu_bwd.spv  softmax.comp  softmax.spv  softmax_bwd.comp  softmax_bwd.spv
src/shaders/bwd/: cross_entropy_bwd.wgsl  embedding_bwd.wgsl  grad_scale.wgsl  (+10 more)
(+13 files in other folders)
