[package]
name = "akasha-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# filuplex = { path = "../filuplex/" } # { git = "https://github.com/superroket169/filuplex" }
wilupgu = { path = "../wilupgu/" } #  { git = "https://github.com/superroket169/wilupgu" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
rand = "0.8"
