[package]
name = "akasha-core"
version = "0.1.0"
edition = "2024"

[dependencies]
wilupgu = { path = "../wilupgu" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
rand = "0.8"
tokenizers = { version = "0.19", features = ["http"] }

[features]
default = ["vulkan"]
vulkan = ["wilupgu/vulkan"]
cuda = ["wilupgu/cuda"]
